--- a/templates/korobka.html
+++ b/templates/korobka.html
@@ -208,6 +208,56 @@
   </div>
 </div>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Capacity Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
+<div class="integrator-capacity-section padding-bottom-150 integrator-subsection" id="feature">
+  <div class="container">
+    <div class="integrator-section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        Возможности коробочной версии Битрикс24
+      </h2>
+      <a href="#" class="integrator-btn btn-fill--up">
+        <span>Начать использовать Битрикс24</span>
+      </a>
+    </div>
+    <div class="integrator-capacity">
+        <div class="integrator-feature-item" bis_skin_checked="1">
+          <h4 class="integrator-feature__title">01</h4>
+          <div class="integrator-feature-list">
+            <h5>Установка на ваш сервер или сервер провайдера</h5>
+            <p>Размещайте Битрикс24 на собственных серверах или инфраструктуре провайдера. Вы полностью контролируете данные, безопасность и технические параметры системы.</p>
+          </div>
+        </div>
+        <div class="integrator-feature-item" bis_skin_checked="1">
+          <h4 class="integrator-feature__title">02</h4>
+          <div class="integrator-feature-list">
+            <h5>Расширенные возможности и интеграции</h5>
+            <p>Коробочная версия предоставляет больше функций, чем облачная: дополнительные модули, гибкие настройки и интеграции с внешними сервисами под задачи вашей компании.</p>
+          </div>
+        </div>
+        <div class="integrator-feature-item" bis_skin_checked="1">
+          <h4 class="integrator-feature__title">03</h4>
+          <div class="integrator-feature-list">
+            <h5>Гибкая настройка бизнес-логики и интерфейса</h5>
+            <p>Адаптируйте систему под собственные процессы: создавайте уникальные сценарии, изменяйте интерфейс, автоматизируйте работу отделов и внедряйте индивидуальные решения.</p>
+          </div>
+        </div>
+        <div class="integrator-feature-item" bis_skin_checked="1">
+          <h4 class="integrator-feature__title">04</h4>
+          <div class="integrator-feature-list">
+            <h5>Бесшовный переход с облачной версии</h5>
+            <p>При миграции с облачного Битрикс24 сохраняются все данные, пользователи и история работы. Переход происходит безопасно и без потери информации.</p>
+          </div>
+        </div>
+    </div>
+  </div>
+  <div class="integrator-cta-base_over">
+    <img src="{% static '/image/cta/bubbles-top-grand.png' %}" alt="Bubbles" />
+  </div>
+</div>
+
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Price Section
