--- a/templates/korobka.html
+++ b/templates/korobka.html
@@ -258,12 +258,70 @@
   </div>
 </div>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Flex Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+<div class="integrator-felx-section padding-bottom-150 padding-top-150">
+  <div class="container">
+    <div class="integrator-section-heading">
+      <h2 class="integrator-subheading heading-md">
+        Для кого будет полезна коробочная версия
+      </h2>
+      <p class="integrator-text">Быстрое и удобное решение для бизнеса, которому важны мобильность, простота
+        запуска и минимальные затраты на инфраструктуру. Облачный Битрикс24 позволяет начать работу сразу и
+        масштабироваться по мере роста компании.
+      </p>
+      <a href="#" class="integrator-btn btn-fill--up">
+        <span>Начать использовать</span>
+      </a>
+    </div>
+    <div class="integrator-check-points">
+      <div class="integrator-check-point">
+        <span class="poin-number">
+          01
+        </span>
+        <p class="point-descr">Для малого и среднего бизнеса, которому важно быстро внедрить CRM и инструменты для команды без сложной технической настройки</p>
+      </div>
+      <div class="integrator-check-point check-point-green">
+        <span class="poin-number">
+          02
+        </span>
+        <p class="point-descr">Для компаний без собственного IT-отдела, которым не хочется заниматься серверами, обновлениями и администрированием</p>
+      </div>
+      <div class="integrator-check-point check-point-purple">
+        <span class="poin-number">
+          03
+        </span>
+        <p class="point-descr">Для распределённых команд и удалённых сотрудников, которым нужен доступ к системе из любой точки мира</p>
+      </div>
+      <div class="integrator-check-point">
+        <span class="poin-number">
+          04
+        </span>
+        <p class="point-descr">Для стартапов и проектов на этапе активного роста, где важна гибкость и возможность быстро менять тариф</p>
+      </div>
+      <div class="integrator-check-point">
+        <span class="poin-number">
+          05
+        </span>
+        <p class="point-descr">Для компаний, которым достаточно стандартного функционала CRM, задач, коммуникаций и автоматизации</p>
+      </div>
+      <div class="integrator-check-point check-point-yellow">
+        <span class="poin-number">
+          06
+        </span>
+        <p class="point-descr">Для бизнеса, который хочет прогнозируемые расходы и регулярные обновления без дополнительных вложений</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Price Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-<div class="integrator-price-section padding-bottom-150 padding-top-150">
+<div class="integrator-price-section padding-bottom-150 integrator-subsection">
   <div class="container">
     <div class="integrator-section-heading">
       <h2 class="integrator-subheading heading-md text-center">
