--- a/templates/oblako.html
+++ b/templates/oblako.html
@@ -185,64 +185,79 @@
       </a>
     </div>
     <div class="integrator-capacity">
-        <div class="integrator-feature-item" bis_skin_checked="1">
-          <h4 class="integrator-feature__title">01</h4>
-          <div class="integrator-feature-list">
-            <h5>CRM для управления продажами</h5>
-            <p>Автоматизируйте процесс продаж от первого контакта до закрытия сделки. Вся история взаимодействия с клиентом — звонки, письма, задачи и встречи — хранится в едином пространстве CRM. Контролируйте каждый этап воронки, анализируйте эффективность менеджеров и увеличивайте конверсию без лишних усилий.</p>
-          </div>
+      <div class="integrator-feature-item" bis_skin_checked="1">
+        <h4 class="integrator-feature__title">01</h4>
+        <div class="integrator-feature-list">
+          <h5>CRM для управления продажами</h5>
+          <p>Автоматизируйте процесс продаж от первого контакта до закрытия сделки. Вся история взаимодействия
+            с клиентом — звонки, письма, задачи и встречи — хранится в едином пространстве CRM. Контролируйте каждый
+            этап воронки, анализируйте эффективность менеджеров и увеличивайте конверсию без лишних усилий.</p>
         </div>
-        <div class="integrator-feature-item" bis_skin_checked="1">
-          <h4 class="integrator-feature__title">02</h4>
-          <div class="integrator-feature-list">
-            <h5>Задачи и проекты для командной работы</h5>
-            <p>Создавайте задачи, назначайте ответственных и сроки, управляйте приоритетами. Для работы с проектами в Битрикс24 доступны канбан-доски, диаграмма Ганта, календарь и инструменты SCRUM. Всё это помогает команде видеть общую картину, держать фокус на цели и работать слаженно.</p>
-          </div>
+      </div>
+      <div class="integrator-feature-item" bis_skin_checked="1">
+        <h4 class="integrator-feature__title">02</h4>
+        <div class="integrator-feature-list">
+          <h5>Задачи и проекты для командной работы</h5>
+          <p>Создавайте задачи, назначайте ответственных и сроки, управляйте приоритетами. Для работы с проектами
+            в Битрикс24 доступны канбан-доски, диаграмма Ганта, календарь и инструменты SCRUM. Всё это помогает команде
+            видеть общую картину, держать фокус на цели и работать слаженно.</p>
         </div>
-        <div class="integrator-feature-item" bis_skin_checked="1">
-          <h4 class="integrator-feature__title">03</h4>
-          <div class="integrator-feature-list">
-            <h5>Конструктор сайтов с шаблонами и CRM-
-интеграцией</h5>
-            <p>Запустите современный сайт для бизнеса без программирования — с готовыми адаптивными шаблонами и интеграцией с CRM. Все действия посетителей — заявки, звонки, формы обратной связи — автоматически фиксируются в CRM, помогая быстрее обрабатывать обращения и повышать продажи.</p>
-          </div>
+      </div>
+      <div class="integrator-feature-item" bis_skin_checked="1">
+        <h4 class="integrator-feature__title">03</h4>
+        <div class="integrator-feature-list">
+          <h5>Конструктор сайтов с шаблонами и CRM-
+            интеграцией</h5>
+          <p>Запустите современный сайт для бизнеса без программирования — с готовыми адаптивными шаблонами
+            и интеграцией с CRM. Все действия посетителей — заявки, звонки, формы обратной связи — автоматически
+            фиксируются в CRM, помогая быстрее обрабатывать обращения и повышать продажи.</p>
         </div>
-        <div class="integrator-feature-item" bis_skin_checked="1">
-          <h4 class="integrator-feature__title">04</h4>
-          <div class="integrator-feature-list">
-            <h5>Контакт-центр для коммуникаций с клиентами</h5>
-            <p>Объедините все каналы связи — телефонию, мессенджеры, соцсети, email и онлайн-чаты — в одном окне. Каждое сообщение и звонок сохраняются в CRM, что позволяет не терять важную информацию и выстраивать непрерывный диалог с клиентом.</p>
-          </div>
+      </div>
+      <div class="integrator-feature-item" bis_skin_checked="1">
+        <h4 class="integrator-feature__title">04</h4>
+        <div class="integrator-feature-list">
+          <h5>Контакт-центр для коммуникаций с клиентами</h5>
+          <p>Объедините все каналы связи — телефонию, мессенджеры, соцсети, email и онлайн-чаты — в одном окне. Каждое
+            сообщение и звонок сохраняются в CRM, что позволяет не терять важную информацию и выстраивать непрерывный
+            диалог с клиентом.</p>
         </div>
-        <div class="integrator-feature-item" bis_skin_checked="1">
-          <h4 class="integrator-feature__title">05</h4>
-          <div class="integrator-feature-list">
-            <h5>Интернет-магазин для онлайн-продаж</h5>
-            <p>Создавайте и управляйте интернет-магазином без привлечения разработчиков. Добавляйте товары, контролируйте заказы, скидки и оплату, а встроенная аналитика поможет отслеживать показатели и находить точки роста вашего бизнеса.</p>
-          </div>
+      </div>
+      <div class="integrator-feature-item" bis_skin_checked="1">
+        <h4 class="integrator-feature__title">05</h4>
+        <div class="integrator-feature-list">
+          <h5>Интернет-магазин для онлайн-продаж</h5>
+          <p>Создавайте и управляйте интернет-магазином без привлечения разработчиков. Добавляйте товары, контролируйте
+            заказы, скидки и оплату, а встроенная аналитика поможет отслеживать показатели и находить точки роста вашего
+            бизнеса.</p>
         </div>
-        <div class="integrator-feature-item" bis_skin_checked="1">
-          <h4 class="integrator-feature__title">06</h4>
-          <div class="integrator-feature-list">
-            <h5>Онлайн-офис для командной работы</h5>
-            <p>Единое цифровое пространство для совместной работы: чат, общий диск, календарь, планировщик задач и контроль времени. Работайте синхронно, где бы вы ни находились — в офисе, дома или в пути. Всё для максимальной продуктивности команды.</p>
-          </div>
+      </div>
+      <div class="integrator-feature-item" bis_skin_checked="1">
+        <h4 class="integrator-feature__title">06</h4>
+        <div class="integrator-feature-list">
+          <h5>Онлайн-офис для командной работы</h5>
+          <p>Единое цифровое пространство для совместной работы: чат, общий диск, календарь, планировщик задач
+            и контроль времени. Работайте синхронно, где бы вы ни находились — в офисе, дома или в пути.
+            Всё для максимальной продуктивности команды.</p>
         </div>
-        <div class="integrator-feature-item" bis_skin_checked="1">
-          <h4 class="integrator-feature__title">07</h4>
-          <div class="integrator-feature-list">
-            <h5>Мессенджер для корпоративных
-коммуникаций</h5>
-            <p>Общайтесь с коллегами в чатах, проводите видеозвонки и совещания онлайн. Создавайте групповые чаты для отделов или рабочих групп, делитесь файлами и принимайте решения быстрее, не покидая Битрикс24.</p>
-          </div>
+      </div>
+      <div class="integrator-feature-item" bis_skin_checked="1">
+        <h4 class="integrator-feature__title">07</h4>
+        <div class="integrator-feature-list">
+          <h5>Мессенджер для корпоративных
+            коммуникаций</h5>
+          <p>Общайтесь с коллегами в чатах, проводите видеозвонки и совещания онлайн. Создавайте групповые чаты
+            для отделов или рабочих групп, делитесь файлами и принимайте решения быстрее, не покидая Битрикс24.</p>
         </div>
-        <div class="integrator-feature-item" bis_skin_checked="1">
-          <h4 class="integrator-feature__title">08</h4>
-          <div class="integrator-feature-list">
-            <h5>Мобильное приложение для управления на ходу</h5>
-            <p>Работайте с клиентами, контролируйте задачи и общайтесь с командой прямо со смартфона. Все ключевые инструменты Битрикс24 доступны в мобильном приложении — оставайтесь на связи и управляйте бизнесом в любое время и в любом месте.</p>
-          </div>
+      </div>
+      <div class="integrator-feature-item" bis_skin_checked="1">
+        <h4 class="integrator-feature__title">08</h4>
+        <div class="integrator-feature-list">
+          <h5>Мобильное приложение для управления на ходу</h5>
+          <p>Работайте с клиентами, контролируйте задачи и общайтесь с командой прямо со смартфона. Все ключевые
+            инструменты Битрикс24 доступны в мобильном приложении — оставайтесь на связи и управляйте бизнесом в любое
+            время и в любом месте.</p>
         </div>
+      </div>
     </div>
   </div>
   <div class="integrator-cta-base_over">
@@ -250,11 +265,69 @@
   </div>
 </div>
 
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Flex Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+<div class="integrator-felx-section padding-bottom-150 padding-top-150">
+  <div class="container">
+    <div class="integrator-section-heading">
+      <h2 class="integrator-subheading heading-md">
+        Для кого будет полезна коробочная версия
+      </h2>
+      <p class="integrator-text">Быстрое и удобное решение для бизнеса, которому важны мобильность, простота
+        запуска и минимальные затраты на инфраструктуру. Облачный Битрикс24 позволяет начать работу сразу и
+        масштабироваться по мере роста компании.
+      </p>
+      <a href="#" class="integrator-btn btn-fill--up">
+        <span>Начать использовать</span>
+      </a>
+    </div>
+    <div class="integrator-check-points">
+      <div class="integrator-check-point">
+        <span class="poin-number">
+          01
+        </span>
+        <p class="point-descr">Для малого и среднего бизнеса, которому важно быстро внедрить CRM и инструменты для команды без сложной технической настройки</p>
+      </div>
+      <div class="integrator-check-point check-point-green">
+        <span class="poin-number">
+          02
+        </span>
+        <p class="point-descr">Для компаний без собственного IT-отдела, которым не хочется заниматься серверами, обновлениями и администрированием</p>
+      </div>
+      <div class="integrator-check-point check-point-purple">
+        <span class="poin-number">
+          03
+        </span>
+        <p class="point-descr">Для распределённых команд и удалённых сотрудников, которым нужен доступ к системе из любой точки мира</p>
+      </div>
+      <div class="integrator-check-point">
+        <span class="poin-number">
+          04
+        </span>
+        <p class="point-descr">Для стартапов и проектов на этапе активного роста, где важна гибкость и возможность быстро менять тариф</p>
+      </div>
+      <div class="integrator-check-point">
+        <span class="poin-number">
+          05
+        </span>
+        <p class="point-descr">Для компаний, которым достаточно стандартного функционала CRM, задач, коммуникаций и автоматизации</p>
+      </div>
+      <div class="integrator-check-point check-point-yellow">
+        <span class="poin-number">
+          06
+        </span>
+        <p class="point-descr">Для бизнеса, который хочет прогнозируемые расходы и регулярные обновления без дополнительных вложений</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Price Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-<div class="integrator-price-section padding-bottom-150 padding-top-150">
+<div class="integrator-price-section padding-bottom-150 integrator-subsection">
   <div class="container">
     <div class="integrator-section-heading">
       <h2 class="integrator-subheading heading-md text-center">
